Bug 1638568 - E.g. uniform1i(null, ...) should check avail len not total len. r=lsalzman

Also:
* Propagate null-location UniformDatas to host
* Move transpose validation to host-side

Differential Revision: https://phabricator.services.mozilla.com/D98243